# versiref-search

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: README.md  indexing.md  searching.md
src/versiref/search/: __init__.py  analyzer.py  cli.py  database.py  indexer.py  markdown_parser.py  models.py  searcher.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_database.py  test_indexer.py  test_markdown_parser.py  test_models.py  test_searcher.py
tests/data/: irenaeus-ah-3.21.md  speculum-bvm-ch01.md
