[project]
name = "versiref-search"
version = "0.1.0"
description = "Search texts for Bible references with versiref"
readme = "README.md"
authors = [
    { name = "Fr. John Lawrence M. Polis", email = "emptier-sank-dose@duck.com" }
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "versiref>=0.2.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "versiref.search"
