[project]
name = "versiref-search"
version = "0.1.0"
description = "Search texts for Bible references with versiref"
readme = "README.md"
authors = [
    { name = "Fr. John Lawrence M. Polis", email = "emptier-sank-dose@duck.com" }
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "versiref>=0.3.0",
    "click>=8.1.0",
    "mistune>=3.0.0",
]

[project.scripts]
versiref-search = "versiref.search.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "versiref.search"

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D213"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.1",
]
