[project]
name = "versiref-search"
version = "0.3.0"
description = "Search texts for Bible references with versiref"
readme = "README.md"
authors = [
    { name = "Fr. John Lawrence M. Polis", email = "emptier-sank-dose@duck.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Religion",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Religion",
    "Topic :: Text Processing",
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "versiref>=0.5.1",
    "click>=8.1.0",
    "mistune>=3.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
versiref-search = "versiref.search.cli:main"

[project.urls]
Homepage = "https://github.com/fiapps/versiref-search"
Issues = "https://github.com/fiapps/versiref-search/issues"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "versiref.search"

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.ruff.lint]
select = ["D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D101", "D102", "D103"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "types-pyyaml>=6.0.12.20250915",
]
